<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/typeGif" android:title="GIFs"/>
    <item android:id="@+id/typeStickers" android:title="Stickers"/>
    <item android:id="@+id/typeText" android:title="Text"/>
</menu>