<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemoActivityJava">

    <com.giphy.sdk.ui.views.GPHMediaView
        android:id="@+id/gifView"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:layout_gravity="center" />

    <ImageView
            android:id="@+id/imageView"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#EEEEEE"
            android:layout_gravity="center" />

    <FrameLayout
            android:id="@+id/launchGiphyBtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/gph_logo_button_rounded_shape"
            android:layout_gravity="bottom|left"
            >

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_gravity="center"
                android:src="@drawable/gph_logo_button" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>